--- a/css/style.css
+++ b/css/style.css
@@ -81,12 +81,25 @@ span {
   color: black;
 }
 .nav-list-link {
+  position: relative;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--secondary-text-color);
 }
+
+.nav-list-link.current::after {
+content: "";
+width: 100%;
+height: 4px;
+border-radius: 2px;
+background-color: var(--main-hover-color);
+position: absolute;
+display: block;
+bottom: -32.3px;
+}
+
 
 .nav-list-link:hover,
 :focus {
