--- a/css/style.css
+++ b/css/style.css
@@ -107,7 +107,7 @@ bottom: -32.3px;
 .nav-list-link:hover,
 :focus {
   color: var(--main-hover-color);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ 
 }
 
 .header-container {
@@ -145,7 +145,7 @@ bottom: -32.3px;
 .header-contacts:hover,
 :focus {
   color: var(--main-hover-color);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ 
 }
 
 .nav-list-item {
@@ -233,13 +233,13 @@ bottom: -32.3px;
   background: #188ce8;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  
 }
 .hero-button:focus {
   background: #188ce8;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  
 }
 /* advantages */
 .advantages {
@@ -407,13 +407,14 @@ bottom: -32.3px;
   background-color: transparent;
   border-radius: 50%;
   fill: #afb1b8;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  fill 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
 }
 .social-link:hover,
 .social-link:focus {
   background: var(--main-hover-color);
   fill: #ffffff;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  
 }
 
 .container-customers {
@@ -467,8 +468,7 @@ bottom: -32.3px;
 .customers-icon:hover {
   fill: var(--main-hover-color);
   border: 1px solid var(--main-hover-color);
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), 
-  border 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
+  
 }  
   
 
@@ -523,13 +523,14 @@ color: #FFFFFF;
   background-color: rgba(255, 255, 255, 0.1);
   border-radius: 50%;
   fill: #FFFFFF;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contats-us-link:hover,
 .contats-us-link:focus {
   background-color: var(--main-hover-color);
   fill: #FFFFFF;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  
 }
 
 .contats-us-item:not(:last-child) {
@@ -602,11 +603,11 @@ color: #FFFFFF;
 }
 .footer-contacts:focus {
   color: var(--main-hover-color);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  
 }
 .footer-contacts:hover {
   color: var(--main-hover-color);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  
 }
 footer {
   background-color: var(--secondary-background-color);
@@ -640,7 +641,8 @@ footer {
   line-height: 1.62;
   letter-spacing: 0.03em;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
-  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+  box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
 }
 
 .portfolio-nav:not(:last-child) {
@@ -651,15 +653,13 @@ footer {
   background: var(--main-hover-color);
   color: #ffffff;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  
 }
 .portfolio-nav-list:focus {
   background: var(--main-hover-color);
   color: #ffffff;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  
 }
 .portfolio-img-list {
   width: 370px;
