--- a/css/style.css
+++ b/css/style.css
@@ -315,6 +315,7 @@ bottom: -32.3px;
 .specialization-list {
   margin-top: 0;
   display: block;
+  
 }
 .specialization-list + .specialization-list {
   margin-left: 30px;
@@ -322,8 +323,30 @@ bottom: -32.3px;
 
 .specialization-art {
   display: flex;
+    
 }
 
+.item-monoblock {
+  position: relative;
+  margin-left: 30px;
+}
+.monoblock-text {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  background-color: rgba(47, 48, 58, 0.8);
+  bottom: 0;
+  width: 100%;
+  height: 70px;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.14;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #ffffff;
+}
 /* Team */
 
 .team-item {
@@ -670,12 +693,13 @@ footer {
 }
 .portfolio-link {
   display: block;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-link:hover,
 .portfolio-link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-
+  
 }
 
 .portfolio-img {
@@ -687,6 +711,8 @@ footer {
   margin-right: 30px;
   margin-bottom: 30px;
 }
+
+
 
 .portfolio-img-list:nth-child(3n) {
   margin-right: 0;
@@ -719,3 +745,31 @@ footer {
   border-right: 1px solid var(--portfolio-img-border);
 }
 
+.portfolio-link-wrap {
+  position: relative;
+  overflow: hidden;
+}
+
+.portfolio-top-text {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgba(33, 150, 243, 0.9);
+  padding: 63px 24px;
+  font-size: 18px;
+  line-height: 1.55;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+  height: 100%;
+  overflow: auto;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  
+
+  .portfolio-link:hover .portfolio-top-text,
+  .portfolio-link:focus .portfolio-top-text {
+    transform: translateY(0);
+    /* transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); */
+  }
+  
