--- a/css/style.css
+++ b/css/style.css
@@ -773,3 +773,57 @@ footer {
     /* transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); */
   }
   
+  /* Modal */
+  .backdrop {
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.1);
+    position: fixed;
+    top: 0;
+    transition: opacity 250ms, visibility 250ms;
+  }
+  
+  .backdrop.is-hidden .modal {
+    transform: translate(-50%, -50%);
+  }
+  
+  .modal {
+    width: 528px;
+    height: 581px;
+    border-radius: 4px;
+    background-color: #ffffff;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+      0px 2px 1px rgba(0, 0, 0, 0.2);
+  
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    animation: animateX30 3000ms infinite 1000ms;
+    transform: translate(-50%, -50%);
+  }
+  
+  .modal-close {
+    width: 30px;
+    height: 30px;
+    background-color: transparent;
+    border-radius: 50%;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .modal-close-icon {
+    width: 18px;
+    height: 18px;
+    cursor: pointer;
+  }
+  
+  .is-hidden {
+    visibility: hidden;
+    opacity: 0;
+    pointer-events: none;
+  }
